Add dynamic content loading and update UI
Introduces data.json for structured page content and main.js to dynamically load and populate content based on the page. Refactors index.html to use new sections, cards, and improved layout, updates navigation styles, and adds Bootstrap as a dependency for enhanced styling.

--- a/package.json
+++ b/package.json
@@ -26,5 +26,8 @@
     "type": "git",
     "url": "https://github.com/ThanasisTh98/theo-webdev.io.git"
   },
-  "homepage": "https://thanasisth98.github.io/theo-webdev.io/"
+  "homepage": "https://thanasisth98.github.io/theo-webdev.io/",
+  "dependencies": {
+    "bootstrap": "^5.3.8"
+  }
 }
