Revamp Cafe Royal project UI and assets
Replaced outdated Cafe Royal screenshots with new design iteration images and updated the project-cafe-royal.html carousel to reflect these changes. Added animated gradient background and pause/play functionality via gradient.js, with supporting CSS updates. Improved visual styles for navigation and project cards, and fixed image path and button data in project-card-data.json and university-website.html.

--- a/data/project-card-data.json
+++ b/data/project-card-data.json
@@ -12,11 +12,6 @@
             "href": "https://codepen.io/ThanasisTh98",
             "class": "btn-outline-tt-primary",
             "target": "_blank"
-          },
-          {
-            "label": "Learn More",
-            "href": "#codepen-details",
-            "class": "btn-outline-tt-secondary"
           }
         ]
       },
@@ -24,14 +19,8 @@
         "title": "University Website",
         "categories": ["Professional", "Web Design"],
         "description": "A quick snapshot of my work at the University of Hertfordhsire. Detailing one of my many projects I've worked on.",
-        "image": "./assets/white-logo.png",
+        "image": "./assets/White-Logo.png",
         "buttons": [
-          {
-            "label": "Visit Site",
-            "href": "https://www.herts.ac.uk",
-            "class": "btn-outline-tt-primary",
-            "target": "_blank"
-          },
           {
             "label": "Learn More",
             "href": "university-website.html",
@@ -48,8 +37,7 @@
           {
             "label": "Learn More",
             "href": "project-cafe-royal.html",
-            "class": "btn-outline-tt-secondary",
-            "target": "_blank"
+            "class": "btn-outline-tt-secondary"
           }
         ]
       }
