Update portfolio assets and styles, remove quick contact
Replaced old resume PDF with updated CV, added a new 'coming soon' image, and updated an image in the project-cafe-royal folder. Removed the quick contact section from contact.html and updated color and font sizes in main.css for improved appearance. Also updated the live site link in README.md and removed the large styles.css file.

--- a/data/project-card-data.json
+++ b/data/project-card-data.json
@@ -40,6 +40,19 @@
             "class": "btn-outline-tt-secondary"
           }
         ]
+      },
+      {
+        "title": "More Projects Coming Soon",
+        "categories": ["Coming Soon"],
+        "description": "Additional portfolio projects are in the pipeline! Currently managing a demanding work schedule.",
+        "image": "./assets/coming-soong.png",
+        "buttons": [
+          {
+            "label": "Stay Tuned",
+            "href": "#",
+            "class": "btn-outline-tt-primary disabled"
+          }
+        ]
       }
     ]
   }
